Set max width of image to prevent overflow

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -221,9 +221,9 @@ a {
     }
     img {
       align-self: start;
-      width: 20em;
-      min-width: 20em;
-      max-width: 100%;
+      width: 18em;
+      min-width: 18em;
+      max-width: 18em;
       margin-right: 1em;
       margin-bottom: 1em;
     }
